<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/avatarSelectionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SetAvatarActivity">


    <!-- Instruction Text -->
    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/chooseAvatar"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_gravity="center" />

    <!-- Avatar RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/avatarRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/or"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/uploadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/upload_pic"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

    <ImageButton
        android:id="@+id/profilePictureButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@drawable/account_circle"
        android:contentDescription="profile picture upload"
        android:scaleType="centerCrop"
        android:src="@drawable/image_not_found" />
    <!-- Submit Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitAvatarButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:padding="20dp"
        android:textSize="18sp"
        android:background="#FF4081"
        android:textColor="@color/white" />

</LinearLayout>
