<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dancing_script"
            android:text="@string/welcome_to"
            android:textColor="#9c4a24"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/app_name"
            android:textColor="#1d428a"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_title" />

        <LinearLayout
            android:id="@+id/error_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/red_box_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="gone"> <!-- Initially hidden -->

            <ImageView
                android:id="@+id/error_icon"
                android:layout_width="75dp"
                android:layout_height="54dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/error" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/error"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <!-- Log In Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:animation="@anim/bounce"
            android:background="@drawable/rounded_green_button"
            android:padding="15dp"
            android:text="@string/button_login"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="@+id/textview_title"
            app:layout_constraintStart_toStartOf="@+id/textview_title"
            app:layout_constraintTop_toBottomOf="@+id/textview_title" />

        <!-- TextView for the question above the sign-up button -->
        <TextView
            android:id="@+id/textview_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/no_acc"
            android:textColor="@color/brown"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_orange_button"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/textview_title"
            app:layout_constraintStart_toStartOf="@+id/textview_title"
            app:layout_constraintTop_toBottomOf="@id/button_login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
